deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-test-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-test-app
  template:
    metadata:
      labels:
        app: my-test-app
    spec:
      containers:
      - name: my-test-app
        image: quay.io/rhosdt/nodejs-rest-http-crud:latest # הגרסה שלך
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 5
