service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-test-app
spec:
  selector:
    app: my-test-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
